users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
spec:
  selector:
    app: users
  ports:
  - name: http
    port: 8080
    targetPort: 5002
